--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <h1>Welcome to Camp!</h1>
+    <p>We are excited that you have chosen The Sports Camp to meet your child's summer camping needs.</p>
+    <p>If you're interested in learning more about our options this summer, please sign up for the interest list!</p>
+
+    <label for="email">Please enter your email address below</label>
+      <input type="email" id="email" name="email">
+
+    <button type="button" onclick="alert('Thank you for signing up!')">Sign up! </button>
   </body>
 </html>
